style.css
@import url("https://use.fontawesome.com/releases/v6.5.1/css/all.css");
@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Playwrite+HU:wght@100..400&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
/*universal styles*/
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
  }
  html{
    overflow-x: hidden;
  }
    body {
      background-image: linear-gradient(to right, #decdae ,#ffd3dd);
      color: #372d35;
      font-family: "Karla", sans-serif;
      font-size: 1.2rem;
      height: 100vh;
      /*overflow: hidden;*/
      width: 100%; 
    }
a{
  font-family: "Karla", sans-serif;
  text-decoration: none;
}

ul{
  list-style: none;
}
/*navigation styles*/
nav{
  height: 10vh;
  position: sticky;
  width: 100%;
}
.nav-container{
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: space-around;
  width: 100%;
}
.logo{
  color: black;
  font-size: 2rem;
  font-weight: 700;
}
.logo span{
  color: #55768c;
}
.menu, .cancel{
  color: #decdae;
  cursor: pointer;
  display: none;
  font-size: 2rem;
  position: absolute;
  right: 15px;
  top: 10px;
}
.nav-container .links{
  align-items: center;
  display: flex;
  gap: 3rem;
}
.nav-container .links a{
  color: #92a1c5;
  font-size: 1.2rem;
  font-weight: 800;
  position: relative;
  transform: .3s linear;
}
.nav-container .links a::before{
  background-color: #f3a0ad;
  bottom: -3px;
  content: '';
  height: 3px;
  left: 0;
  position: absolute;
  transition: .3s linear;
  width: 0%;
}
.nav-container .links a:hover::before{
  width: 100%;
}
.nav-container .links a:hover{
  color: #55768c;
}
.dropdown{
  backdrop-filter: brightness(10%) blur(40px);
  box-shadow: 0 0 20px #372d35;
  height: auto;
  position: absolute;
  top: 0;
  transform: translateY(-500px);
  transition: .2S linear;
  width: 100%;
  z-index: 100;
}
.dropdown .links a{
  align-items: center;
  color: #f3a0ad;
  display: flex;
  justify-content: center;
  padding: 15px 0;
  transition: .2s linear;
}
.dropdown .links a:hover{
  background-color: #ffe5ec;
}

/*home section */
section{
  height: 75vh;
  width: 100%;
}
.main-container{
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: space-evenly;
  width: 100%;
}
.main-container .image{
  width: 50%;
  z-index: 1;
}
.main-container .image img{
  width: 100%;
}
.main-container .content{
  color: #372d35;
  height: 100px;
  width: 40%;
}
.content h1{
  font-size: clamp(.5rem, 1rem + 5vw, 2rem);
}
.content h1 span{
  color: #ffe5ec;
  text-shadow: 0 0 10px #f3a0ad;
}
.content .typewriter{
  font-size: clamp(1rem, 1rem + 5vw, 1.5rem);
  font-weight: 600;
}
.content .typewriter span{
  color: #ffe5ec;
  font-size: 2rem;
  position: relative;
  text-shadow: 0 0 5px #f3a0ad;
  transition: .3s linear;
}
.typewriter span::before{
  animation: words 15s infinite;
  content: 'Web Dev';
}
.typewriter span::after{
  animation: cursor .6s linear;
  border-left: 3px solid #55768c;
  content: '';
  height: 100%;
  position: absolute;
  width: calc(100% + 8px);
}
@keyframes cursor{
  to{ border-left: 3px solid #55768c}
}
@keyframes words{
  0%, 33%{
    content: 'Web Dev';
  }
  34%,66% {
      content: 'Techie';
  }
  67%,100% {
      content: 'Web Dev';
    }
}
.content p{
  font-size: clamp(.4rem, .2rem + 9vw, 1rem);
  margin: 10px 0;
}
.social-links i{
  align-items: center;
  background-color: transparent;
  border: .2rem solid #f3a0ad;
  border-radius: 50%;
  color: #55768c;
  display: inline-flex;
  font-size: 1.2rem;
  height: 3rem;
  justify-content: center;
  margin: 5px 10px;
  transition: .2s linear;
  width: 3rem;
}
.social-links i:hover{
  background-color: #f3a0ad;
  color: #55768c;
  filter: drop-shadow(0 0 10px #f3a0af);
  rotate: 45deg;
}
.content button{
  background-color: #55768c;
  border: none;
  border-radius: 5px;
  color: #decdae;
  cursor: pointer;
  font-size: 100%;
  font-weight: 700;
  height: 6vh;
  margin: 30px;
  outline: none;
  transition: .2s linear;
  width: 40%;
}
.content button:hover{
  background-color: transparent;
  border: 2px solid #55768c;
  color: #f3a0ad;
  font-weight: 800;
  scale: 1.1;
}

/*responsive styles*/
@media(max-width: 884px){
  body{
    overflow-y: visible;
  }
  nav{
    font-size: 1.5rem;
    left: 15px;
    position: absolute;
    top: 16px;
  }
  .main-container{
    display: flex;
    flex-direction: column;
  }
  .nav-container .links{
    display: none;
  }
  .menu, .cancel{
    display: block;
  }
  .main-container .content{
    width: 80%;
  }
  .social-links i{
    font-size: 1.5rem;
    height: 2.5rem;
    width: 2.5rem;
  }
  .main-container .image{
    margin-bottom: 0px;
    width: 80%;
  }
}

